# ctsa

./: .gitignore  CMakeLists.txt
ctsa/: CMakeLists.txt  Makefile  boxjenkins.cc  boxjenkins.h  brent.cc  brent.h  conjgrad.cc  conjgrad.h  conv.cc  conv.h  ctsa.cc  ctsa.h  dist.cc  dist.h  emle.cc  emle.h  erfunc.cc  erfunc.h  filter.cc  filter.h  hsfft.cc  hsfft.h  initest.cc  initest.h  lls.cc  lls.h  lnsrchmp.cc  lnsrchmp.h  matrix.cc  matrix.h  neldermead.cc  neldermead.h  newtonmin.cc  newtonmin.h  nls.cc  nls.h  optimc.cc  optimc.h  pdist.cc  pdist.h  (+16 more)
test/: CMakeLists.txt  acftest.cc  arimatest.cc  artest.cc  artest2.cc  pacftest.cc  sarimatest.cc
